config/cluster/ingress/envds-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: envds-stripprefix
  namespace: envds
  labels:
    app: envds
spec:
  stripPrefix:
    prefixes:
      - /envds/manage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envds-ingress
  namespace: envds
  # labels:
  #   app: envds
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares:
      envds-envds-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /envds/manage
        pathType: Prefix
        backend:
          service:
            name: envds-manage
            port:
              number: 9080
